# screen-backlightd

./: .gitmodules  CMakeLists.txt  README.md
dbus/: CMakeLists.txt
src/: BacklightDevice.c  BacklightDevice.h  CMakeLists.txt  ScreenBacklightManager.c  ScreenBacklightManager.h  config.h.in  main.c
systemd/: Service.service.in
